--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "embla-carousel-react": "^8.2.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
